--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 # likeyi520.github.io
-<h1>这是我的第一个猪儿虫</h1>
+<head>
+  <style>
+  h1{
+    color:red;
+  }
+</style>
+</head>
+<body>
+  <h1>这是我的第一个猪儿虫</h1>
+</body>
+
